update to jQuery 1.4.4

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -9,7 +9,8 @@
 # are only allowed at the beginning of a line: you may not add comments
 # after directive text on the same line.
 
-[jquery.plugin]
-version=/++resource++zms_/jquery/plugin/jquery.plugin.js
-extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
-zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
+[jquery]
+version=/++resource++zms_/jquery/jquery-1.4.4.min.js
+plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
+plugin.extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
+plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
