Increased Page Speed Score to 81/100: combined and packed javascript and css

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -10,7 +10,22 @@
 # after directive text on the same line.
 
 [jquery]
+libs=all
+#libs=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib
+all=/++resource++zms_/jquery/jquery-all.min.js
 version=/++resource++zms_/jquery/jquery-1.4.4.min.js
 plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
 plugin.extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
 plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
+misc.comlib=/misc_/zms/comlib.js
+misc.formlib=/misc_/zms/formlib.js
+
+[zmi]
+css=all
+#css=manage_page_style.css
+all=/++resource++zms_/manage_page_style-min.css
+manage_page_style.css=/++resource++zms_/manage_page_style.css
+
+[etc]
+#manage_page_style.css=/++resource++zms_etc_/manage_page_style.css
+#manage_page_script.js=/++resource++zms_etc_/manage_page_script.js
