fixed automated combination of resources (js and css).

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -11,7 +11,7 @@
 
 [jquery]
 libs=all
-#libs=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib
+#libs.gen=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib
 all=/++resource++zms_/jquery/jquery-all.min.js
 version=/++resource++zms_/jquery/jquery-1.4.4.min.js
 plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
@@ -22,7 +22,7 @@ misc.formlib=/misc_/zms/formlib.js
 
 [zmi]
 css=all
-#css=manage_page_style.css
+#css.gen=manage_page_style.css
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
 
