--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -10,18 +10,22 @@
 # after directive text on the same line.
 
 [jquery]
-libs=all
-#libs.gen=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib
+libs=all,ui
+#libs=version,ui,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
+#libs.gen=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
 all=/++resource++zms_/jquery/jquery-all.min.js
 version=/++resource++zms_/jquery/jquery-1.4.4.min.js
+ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.8.7.custom.min.js
 plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
 plugin.extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
 plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
 misc.comlib=/misc_/zms/comlib.js
 misc.formlib=/misc_/zms/formlib.js
+misc.main=/misc_/zms/main.js
 
 [zmi]
 css=all
+#css=manage_page_style.css
 #css.gen=manage_page_style.css
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
