jQuery UI: completed 1.8.9 for resizable dialog

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -25,10 +25,11 @@ misc.main=/misc_/zms/main.js
 
 [zmi]
 css=all
-#css=manage_page_style.css
-#css.gen=manage_page_style.css
+#css=manage_page_style.css,ui-lightness
+#css.gen=manage_page_style.css,ui-lightness
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
+ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.8.9.custom.css
 
 [etc]
 #manage_page_style.css=/++resource++zms_etc_/manage_page_style.css
