applied minor fixes for (ajax) file-upload

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -34,3 +34,6 @@ ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.8.13.custo
 [etc]
 #manage_page_style.css=/++resource++zms_etc_/manage_page_style.css
 #manage_page_script.js=/++resource++zms_etc_/manage_page_script.js
+
+[ZMS]
+input.file.plugin=input_file
