[1] revised support for auto-save and restore of form-inputs (7): default off [2] added support for "soft" request-parameters to search-links (highlight-info)

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -37,3 +37,4 @@ ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.8.13.custo
 
 [ZMS]
 input.file.plugin=input_file
+TempFormProperties=0
