added support for bootstrap 2.1.0 (2)

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -24,6 +24,7 @@ misc.formlib=/++resource++zms_/jquery/misc/formlib.js
 misc.main=/++resource++zms_/jquery/misc/main.js
 
 [zmi]
+#theme=zpt
 css=all
 #css=manage_page_style.css,ui-lightness
 #css.gen=manage_page_style.css,ui-lightness
