added support for bootstrap 2.1.0 (4): addyosmani

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -25,12 +25,15 @@ misc.main=/++resource++zms_/jquery/misc/main.js
 
 [zmi]
 #theme=zpt
+#css=manage_page_style_bootstrap.css,ui-bootstrap-addyosmani
 css=all
 #css=manage_page_style.css,ui-lightness
 #css.gen=manage_page_style.css,ui-lightness
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
+manage_page_style_bootstrap.css=/++resource++zms_/bootstrap/plugin/manage_page_style_bootstrap.css
 ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.8.21.custom.css
+ui-bootstrap-addyosmani=/++resource++zms_/bootstrap/plugin/ui-bootstrap-addyosmani/jquery-ui-1.8.16.custom.css
 
 [etc]
 #manage_page_style.css=/++resource++zms_etc_/manage_page_style.css
