--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -14,8 +14,8 @@ libs=all,ui
 #libs=version,ui,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
 #libs.gen=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
 all=/++resource++zms_/jquery/jquery-all.min.js
-version=/++resource++zms_/jquery/jquery-1.8.0.min.js
-ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.8.21.custom.min.js
+version=/++resource++zms_/jquery/jquery-1.8.2.min.js
+ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.9.1.custom.min.js
 plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
 plugin.extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
 plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
@@ -32,7 +32,7 @@ css=all
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
 manage_page_style_bootstrap.css=/++resource++zms_/bootstrap/plugin/manage_page_style_bootstrap.css
-ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.8.21.custom.css
+ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.9.1.custom.min.css
 ui-bootstrap-addyosmani=/++resource++zms_/bootstrap/plugin/ui-bootstrap-addyosmani/jquery-ui-1.8.16.custom.css
 
 [etc]
