added support for bootstrap (83): minify javascript

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -10,9 +10,9 @@
 # after directive text on the same line.
 
 [jquery]
-libs=all,ui
-#libs=version,ui,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
-#libs.gen=version,plugin.version,plugin.extensions,plugin.zmi,misc.comlib,misc.formlib,misc.main
+libs=jquery.all,jquery.ui
+#libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main
+#libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main
 all=/++resource++zms_/jquery/jquery-all.min.js
 version=/++resource++zms_/jquery/jquery-1.8.3.min.js
 ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.9.1.custom.min.js
@@ -22,6 +22,14 @@ plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
 misc.comlib=/++resource++zms_/jquery/misc/comlib.js
 misc.formlib=/++resource++zms_/jquery/misc/formlib.js
 misc.main=/++resource++zms_/jquery/misc/main.js
+
+[bootstrap]
+libs=bootstrap.all,jquery.ui
+#libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
+#libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
+all=/++resource++zms_/bootstrap/bootstrap-all.min.js
+version=/++resource++zms_/bootstrap/js/bootstrap.min.js
+plugin.version=/++resource++zms_/bootstrap/plugin/bootstrap.plugin.zmi.js
 
 [zmi]
 #theme=zpt
