jQuery UI: update from 1.9.1 to 1.10.3

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -15,7 +15,7 @@ libs=jquery.all,jquery.ui
 #libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main
 all=/++resource++zms_/jquery/jquery-all.min.js
 version=/++resource++zms_/jquery/jquery-1.8.3.min.js
-ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.9.1.custom.min.js
+ui=/++resource++zms_/jquery/ui/js/jquery-ui-1.10.3.custom.min.js
 plugin.version=/++resource++zms_/jquery/plugin/jquery.plugin.js
 plugin.extensions=/++resource++zms_/jquery/plugin/jquery.plugin.extensions.js
 plugin.zmi=/++resource++zms_/jquery/plugin/jquery.plugin.zmi.js
@@ -25,8 +25,8 @@ misc.main=/++resource++zms_/jquery/misc/main.js
 
 [bootstrap]
 libs=bootstrap.all,jquery.ui
-#libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
-#libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
+libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
+libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,jquery.misc.main,bootstrap.version,bootstrap.plugin.version
 all=/++resource++zms_/bootstrap/bootstrap-all.min.js
 version=/++resource++zms_/bootstrap/js/bootstrap.min.js
 plugin.version=/++resource++zms_/bootstrap/plugin/bootstrap.plugin.zmi.js
@@ -40,8 +40,8 @@ css=all
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
 manage_page_style_bootstrap.css=/++resource++zms_/bootstrap/plugin/manage_page_style_bootstrap.css
-ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.9.1.custom.min.css
-ui-bootstrap-addyosmani=/++resource++zms_/bootstrap/plugin/ui-bootstrap-addyosmani/jquery-ui-1.8.16.custom.css
+ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.10.3.custom.min.css
+ui-bootstrap-addyosmani=/++resource++zms_/bootstrap/plugin/ui-bootstrap-addyosmani/jquery-ui-1.10.0.custom.css
 
 [etc]
 #manage_page_style.css=/++resource++zms_etc_/manage_page_style.css
