added support for bootstrap (101)

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -40,7 +40,7 @@ css=all
 all=/++resource++zms_/manage_page_style-min.css
 manage_page_style.css=/++resource++zms_/manage_page_style.css
 manage_page_style_bootstrap.css=/++resource++zms_/bootstrap/plugin/manage_page_style_bootstrap.css
-ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.10.3.custom.min.css
+ui-lightness=/++resource++zms_/jquery/ui/css/ui-lightness/jquery-ui-1.10.3.custom.css
 ui-bootstrap-addyosmani=/++resource++zms_/bootstrap/plugin/ui-bootstrap-addyosmani/jquery-ui-1.10.0.custom.css
 
 [etc]
