added support for bootstrap (144): performance-fixes

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -25,8 +25,8 @@ misc.main=/++resource++zms_/jquery/misc/main.js
 
 [bootstrap]
 libs=bootstrap.all,jquery.ui
-#libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,bootstrap.version,bootstrap.plugin.version
-#libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.plugin.zmi,jquery.misc.comlib,jquery.misc.formlib,bootstrap.version,bootstrap.plugin.version
+#libs=jquery.version,jquery.ui,jquery.plugin.version,jquery.plugin.extensions,jquery.misc.comlib,jquery.misc.formlib,bootstrap.version,bootstrap.plugin.version
+#libs.gen=jquery.version,jquery.plugin.version,jquery.plugin.extensions,jquery.misc.comlib,jquery.misc.formlib,bootstrap.version,bootstrap.plugin.version
 all=/++resource++zms_/bootstrap/bootstrap-all.min.js
 version=/++resource++zms_/bootstrap/js/bootstrap.min.js
 plugin.version=/++resource++zms_/bootstrap/plugin/bootstrap.plugin.zmi.js
