added qunit v1.14.0 for JS unit testing

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -49,3 +49,11 @@ zmi.js=/++resource++zms_/bootstrap/bootstrap-all.min.js
 zmi.js.include=jquery.version,jquery.plugin.version,jquery.plugin.extensions,plugins.zmi.core.js,plugins.zmi.internal.js,jquery.misc.formlib,bootstrap.version,bootstrap.plugin.version
 ext.js=/++resource++zms_/zms-all.min.js
 ext.js.include=jquery.version,jquery.plugin.version,plugins.zmi.js,plugins.zmi.core.js
+
+[qunit]
+libs=qunit.js,qunit.test,qunit.zmi.core.js,qunit.zmi.internal.js
+js=/++resource++zms_/qunit/qunit-1.14.0.js
+css=/++resource++zms_/qunit/qunit-1.14.0.css
+test=/++resource++zms_/qunit/test.js
+zmi.core.js=/++resource++zms_/zmi.core.test.js
+zmi.internal.js=/++resource++zms_/zmi.internal.test.js
