--- a/ZMS/trunk/doc/epydoc.conf
+++ b/ZMS/trunk/doc/epydoc.conf
@@ -1,7 +1,7 @@
 [epydoc] # Epydoc section marker (required by ConfigParser)
 
 # Information about the project.
-name: ZMS Zope-based content management system for science, technology and medicine.
+name: ZMS Python based Content Management System for Science, Technology and Medicine.
 url: http://www.zms-publishing.com
 
 # The list of modules to document.  Modules can be named using
