--- a/ZMS/trunk/requirements.txt
+++ b/ZMS/trunk/requirements.txt
@@ -1,6 +1,6 @@
 --index-url https://pypi.python.org/simple/
 
-git+https://github.com/zopefoundation/Zope@2.13#egg=Zope2
+#git+https://github.com/zopefoundation/Zope@2.13#egg=Zope2
 svn+https://zmslabs.org/svn/zmslabs/ZMS/trunk#egg=ZMS3
 
 AccessControl==3.0.11
@@ -19,7 +19,7 @@ nt-svcutils==2.13.0
 Persistence==2.13.2
 persistent==4.0.8
 Products.BTreeFolder2==2.13.4
-Products.CMFCore==2.2.8
+Products.CMFCore==2.3.0dev
 Products.ExternalMethod==2.13.1
 Products.GenericSetup==1.7.5
 Products.MailHost==2.13.2
@@ -91,4 +91,5 @@ zope.testing==4.1.3
 zope.traversing==4.0.0
 zope.untrustedpython==4.0.0
 zope.viewlet==3.7.2
+Zope2==2.13.23dev
 ZopeUndo==4.0
