--- a/ZMS/trunk/requirements.txt
+++ b/ZMS/trunk/requirements.txt
@@ -5,11 +5,12 @@ svn+https://zmslabs.org/svn/zmslabs/ZMS/trunk#egg=ZMS3
 
 AccessControl==3.0.11
 Acquisition==4.1
-BTrees==4.0.8
+BTrees==4.1.1
 DateTime==4.0.1
 DocumentTemplate==2.13.2
 docutils==0.12
 ExtensionClass==4.1
+five.globalrequest==1.0
 five.localsitemanager==2.0.5
 initgroups==2.13.0
 mechanize==0.2.5
@@ -34,62 +35,62 @@ Products.ZSQLMethods==2.13.4
 pytz==2014.10
 Record==3.0
 RestrictedPython==3.6.0
-six==1.8.0
+six==1.9.0
 tempstorage==2.12.2
 ThreadLock==2.13.0
 transaction==1.4.3
 zc.lockfile==1.1.0
 ZConfig==3.0.4
-zdaemon==4.0.0
-ZEO==4.0.0
+zdaemon==4.0.1
+ZEO==4.1.0
 zExceptions==2.13.0
 zLOG==2.12.0
-ZODB==4.0.1
+ZODB==4.1.0
 ZODB3==3.11.0
-zope.annotation==4.2.0
+zope.annotation==4.4.1
 zope.app.publication==3.14.0
 zope.authentication==4.1.0
-zope.browser==2.0.2
+zope.browser==2.1.0
 zope.browsermenu==4.1.0
 zope.browserpage==4.1.0
-zope.browserresource==4.0.2
+zope.browserresource==4.1.0
 zope.component==4.2.1
 zope.configuration==4.0.3
 zope.container==4.0.0
 zope.contentprovider==4.0.0
-zope.contenttype==4.0.1
-zope.datetime==4.0.0
-zope.deferredimport==4.0.0
-zope.dottedname==4.0.1
+zope.contenttype==4.1.0
+zope.datetime==4.1.0
+zope.deferredimport==4.1.0
+zope.dottedname==4.1.0
 zope.error==4.1.1
 zope.event==4.0.3
 zope.exceptions==4.0.7
-zope.filerepresentation==4.0.2
+zope.filerepresentation==4.1.0
 zope.formlib==4.3.0
 zope.globalrequest==1.0
 zope.i18n==4.0.0
 zope.i18nmessageid==4.0.3
-zope.interface==4.1.1
-zope.lifecycleevent==4.0.3
+zope.interface==4.1.2
+zope.lifecycleevent==4.1.0
 zope.location==4.0.3
-zope.pagetemplate==4.0.4
-zope.processlifetime==2.0.0
+zope.pagetemplate==4.1.0
+zope.processlifetime==2.1.0
 zope.proxy==4.1.4
-zope.ptresource==3.9.0
+zope.ptresource==4.0.0
 zope.publisher==3.13.4
 zope.schema==4.4.2
 zope.security==4.0.1
-zope.sendmail==4.0.0
+zope.sendmail==4.0.1
 zope.sequencesort==4.0.1
-zope.site==3.9.2
-zope.size==4.0.1
-zope.structuredtext==4.0.0
-zope.tal==4.0.0
-zope.tales==4.0.2
+zope.site==4.0.0
+zope.size==4.1.0
+zope.structuredtext==4.1.0
+zope.tal==4.1.0
+zope.tales==4.1.0
 zope.testbrowser==4.0.4
 zope.testing==4.1.3
 zope.traversing==4.0.0
 zope.untrustedpython==4.0.0
-zope.viewlet==3.7.2
+zope.viewlet==4.0.0
 Zope2==2.13.23dev
 ZopeUndo==4.0
