modified passwd validation regexp (req by unibe)

--- a/ZMS/trunk/etc/zms.conf
+++ b/ZMS/trunk/etc/zms.conf
@@ -10,7 +10,7 @@
 # after directive text on the same line.
 
 [zms]
-password.regexp=^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).{4,8}$
+password.regexp=(?=.{6,})(?!.*\s)(?=.*?[0-9])(?=.*?[A-Z]).*?[a-z].*
 password.hint=Password expresion that requires one lower case letter, one upper case letter, one digit, 6-13 length, and no spaces.
 
 [plugins]
